--- a/src/app/components/common/navigation/navigation.template.html
+++ b/src/app/components/common/navigation/navigation.template.html
@@ -22,6 +22,10 @@
             <li [ngClass]="{active: activeRoute('minorView')}">
                 <a [routerLink]="['/minorView']"><i class="fa fa-desktop"></i> <span class="nav-label">Minor View</span> </a>
             </li>
+
+            <li [ngClass]="{active: activeRoute('toolsView')}">
+                <a [routerLink]="['/toolsView']"><i class="fa fa-desktop"></i> <span class="nav-label">Tools</span> </a>
+            </li>
         </ul>
 
     </div>
